k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sipsetu
  labels:
    app.kubernetes.io/name: sipsetu
    app.kubernetes.io/part-of: sipsetu
